<resources>
    <string name="app_name">SacApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="client_attendance">Atendimento ao cliente</string>
    <string name="client_attendance1">Atendimento a clientes</string>
    <string name="powered_by">Powered by SACapp</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_app">Demo\nApp</string>
    <string name="balance">Saldo/Extrato</string>
    <string name="client">Cliente:</string>
    <string name="card">Cartão:</string>
    <string name="motivo_do_contato">Motivo do Contato</string>
    <string name="soliciatar_aumento">Solicitar aumento de limite</string>
    <string name="divide_bill">Parcelar fatura</string>
    <string name="purchase_not_recg">Compra não reconhecida</string>
    <string name="others">Outros</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="Dadosdachamada">Dados da Chamada</string>
    <string name="navigation">Navegação:</string>
    <string name="reason">Motivo:</string>
    <string name="expected_waiting_time">Tempo estimado de espera:</string>
    <string name="best_time_call">Melhor horário p/ ligar:</string>
    <string name="protocol">Protocolo</string>
    <string name="call_now">Ligar agora</string>
    <string name="call_later">Me ligue mais tarde</string>
    <string name="chat">Chat</string>
    <string name="open_call">Abrir chamado</string>
    <string name="attendance_time">Horário de Atendimento</string>
    <string name="capital_metropolitan_region">Capital e região metropolitana</string>
    <string name="others_region">Demais localidades</string>
    <string name="title_activity_chat">chat</string>
    <string name="type_here">Digite aqui</string>
    <string name="title_activity_call_open">CallOpen</string>
    <string name="open_call_made">Chamado Aberto c/ Sucesso!</string>
    <string name="please_wait">Por favor aguarde, entraremos em contato.</string>
    <string name="photo">Foto</string>
    <string name="expected_answer_time">Tempo estimado de resposta</string>
    <string name="add_more_inf">Adicionar mais informações</string>
    <string name="talk_with_attendance">Se ainda assim quiser falar c/ um atendente, selecione abaixo</string>
</resources>
