<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ioasys.com.br.sacapp.activities.Chat">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_padrao"/>

    <TextView
        android:id="@+id/data_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Dadosdachamada"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_title"
        android:layout_margin="15dp"
        android:layout_below="@+id/toolbar"
        />

    <TableLayout
        android:id="@+id/data_layout"
        android:paddingLeft="15dp"
        android:layout_below="@+id/data_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/client" />

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="Ana maria consuelo"/>

        </TableRow>

        <TableRow>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/card" />

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="xxx.xxx.xxx.2334"/>
        </TableRow>

        <TableRow>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:paddingRight="5dp"
                android:text="@string/navigation"/>

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="Saldo/extrato"/>
        </TableRow>

        <TableRow>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/reason"/>

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/soliciatar_aumento"/>
        </TableRow>
    </TableLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_app"
        android:background="@drawable/rounded_txt"
        android:padding="15dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:id="@+id/logo"
        android:layout_margin="10dp"
        android:layout_below="@+id/toolbar"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data_layout"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/type_layout"
        android:layout_marginBottom="2dp"
        />

    <LinearLayout
        android:id="@+id/type_layout"
        android:orientation="vertical"
        android:background="#dfdfdf"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_here"
            android:background="@color/transparent"
            android:padding="15dp"
            android:textColorHint="#798EBE"
            />

        <Button
            android:id="@+id/powered_by"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powered_by"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/blind_blue"
            android:layout_marginTop="2dp"
            />

    </LinearLayout>



</RelativeLayout>
