<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="ioasys.com.br.sacapp.activities.OpenedCall">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_app"
        android:background="@drawable/rounded_txt"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/balance"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <TableLayout
        android:id="@+id/data_layout"
        android:paddingLeft="15dp"
        android:layout_below="@+id/data_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <TableRow>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/client" />

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="Ana maria consuelo"/>

        </TableRow>

        <TableRow>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/card" />

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="xxx.xxx.xxx.2334"/>
        </TableRow>

        <TableRow>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:paddingRight="5dp"
                android:text="@string/navigation"/>

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="Saldo/extrato"/>
        </TableRow>

        <TableRow>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/reason"/>

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/soliciatar_aumento"/>
        </TableRow>

        <TableRow>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/photo"/>

            <TextView
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="Sim, comprovante de endereço"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:background="@drawable/rounded_corners"
        android:layout_margin="10dp"
        >

        <TextView
            android:text="@string/open_call_made"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blind_blue"
            android:textSize="25sp"
            android:textStyle="bold"

            android:layout_marginBottom="10dp"
            />

        <TextView
            android:text="@string/please_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blind_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/protocol_layout"
        android:layout_below="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        >
        <ImageView
            android:id="@+id/tic_tac_toe"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/clock"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/protocol"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/expected_answer_time"
                android:layout_marginRight="3dp"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="24 horas"
                android:layout_toRightOf="@+id/protocol"
                />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/protocol_layout2"
        android:layout_below="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="center_vertical"
        android:layout_marginLeft="40dp"
        >
        <ImageView
            android:id="@+id/tic_tac_toe2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/clock"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/protocol2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="@string/protocol"
                android:layout_marginRight="3dp"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/txt_color_standard"
                android:textSize="@dimen/txt_body"
                android:text="474374387"
                android:layout_toRightOf="@+id/protocol2"
                />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/call_later"
        android:text="@string/add_more_inf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Custom_Button"
        android:textAllCaps="false"
        android:layout_marginBottom="3dp"
        android:layout_below="@+id/call_now"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/talk_with_attendance"

        />

</LinearLayout>
