<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ioasys.com.br.sacapp.fragments.Balance">

        <LinearLayout
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_app"
                android:background="@drawable/rounded_txt"
                android:padding="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/balance"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                />

            <RelativeLayout
                android:layout_margin="15dp"
                android:padding="20dp"
                android:background="@drawable/rounded_corners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginLeft="50dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Carla Oliveira"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_toRightOf="@+id/client"
                    android:layout_marginLeft="25dp"
                    />

                <TextView
                    android:id="@+id/card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_marginLeft="50dp"
                    android:layout_below="@+id/client"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xxxx.xxxx.xxxx.4335"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_toRightOf="@+id/card"
                    android:layout_marginLeft="28dp"
                    android:layout_below="@+id/client"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/motivo_do_contato"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="15dp"
                />
            <Button
                android:text="@string/soliciatar_aumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/splash_btn_continue"
                style="@style/Custom_Button"
                android:textAllCaps="false"
                android:layout_marginBottom="5dp"
                />
            <Button
                android:text="@string/divide_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/divide_bill"
                style="@style/Custom_Button"
                android:textAllCaps="false"
                android:layout_marginBottom="5dp"
                />

            <Button
                android:text="@string/purchase_not_recg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/purchase_not_recg"
                style="@style/Custom_Button"
                android:textAllCaps="false"
                android:layout_marginBottom="5dp"
                />
            <Button
                android:text="@string/others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/others"
                style="@style/Custom_Button"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>